--- a/google-drive.html
+++ b/google-drive.html
@@ -3,9 +3,9 @@
 <head>
 <title>Google Drive API Javascript tutorial</title>
 <!-- lightbox.css -->
-<link href="https://github.com/billybunter314/google-drive/blob/main/lightbox.css" rel="stylesheet" type="text/css"/>
+<link href="https://billybunter314.github.io//google-drive/lightbox.css" rel="stylesheet" type="text/css"/>
 <!-- google-drive.css -->
-<link href="https://github.com/billybunter314/google-drive/blob/main/google-drive.css" rel="stylesheet" type="text/css"/>
+<link href="https://billybunter314.github.io/google-drive/google-drive.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
@@ -93,17 +93,17 @@
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <!-- date.js -->
-<script src="https://googledrive.com/host/1f11WCsMdnPUhrmN7WGLA2wNNUF0Wibrg" type="text/javascript"></script>
+<script src="https://billybunter314.github.io/google-drive/date.js" type="text/javascript"></script>
 <!-- lightbox.min.js -->
-<script src="https://googledrive.com/host/1jIq70Vn3GKZP_BhP-KjrTKp97JTmnnam" type="text/javascript"></script>
+<script src="https://billybunter314.github.io/google-drive/lightbox.min.js" type="text/javascript"></script>
 <!-- google-drive.js -->
-<script src="https://googledrive.com/host/14zafFFnpkqlch8Vs6KMVKEr11GKjjrqf" type="text/javascript"></script>
+<script src="https://billybunter314.github.io/google-drive/google-drive.js" type="text/javascript"></script>
 <script async defer src="https://apis.google.com/js/api.js" 
       onload="this.onload=function(){};handleClientLoad()" 
       onreadystatechange="if (this.readyState === 'complete') this.onload()">
 </script>
 <!-- upload.js -->
-<script src="https://googledrive.com/host/1ebwW3q14wNtLYhTyV4m3-33e3QrdUk1s" type="text/javascript"></script>
+<script src="https://billybunter314.github.io/google-drive/upload.js" type="text/javascript"></script>
 
 
 </body>
